# Sonarpad-Mac

./: .gitignore  Cargo.toml  README.md  changelog_cs.md  changelog_en.md  changelog_es.md  changelog_fr.md  changelog_it.md  changelog_pl.md  changelog_pt.md  check.bat  clippy.bat  donations_cs.txt  donations_es.txt  donations_fr.txt  donations_it.txt  donations_pl.txt  donations_pt.txt  patch_main_rs.py  patch_php.py  patch_tv_rs.py  patch_tv_safe.py  run.bat  scratch_api.rs  settings.json  test_ffplay.py  test_headers.py  test_live_api.py  test_resolver.py  test_stream.py  test_tv.py  test_tv_local.py  test_tv_local_server.py
.github/workflows/: crea-release-macos.yml  macos-app-dmg-catalina.yml  macos-app-dmg.yml  test-macos-signing-secrets.yml  test-podcast-macos.yml
i18n/: feed_cs.txt  feed_en.txt  feed_es.txt  feed_fr.txt  feed_it.txt  feed_pl.txt  feed_pt.txt  radio.json  ui_cs.json  ui_en.json  ui_en.json.bac  ui_es.json  ui_fr.json  ui_it.json  ui_it.json.bac  ui_pl.json  ui_pt.json
mpv-config/: sonarpad-prefer-aid-3.lua
scripts/: check-radio-it.ps1  find-fixed-radio-it.ps1  radio-it-broken.txt  radio-it-check-results.json  radiogiuste-debug.json  radiogiuste-debug.txt  radiogiuste.json  radiogiuste.txt
src/: articles.rs  bdciechi.rs  calendar.rs  calendar_data.json  curl_client.rs  directories.rs  edge_tts.rs  file_loader.rs  main.rs  main.rs.bac  podcast_player.rs  podcasts.rs  rai_audiodescrizioni.rs  raiplay.rs  raiplaysound.rs  reader.rs  routes.rs  scheduled_radio.rs  scheduled_tv.rs  treccani.rs  tv.rs  tv.rs.bac2
