[package]
name = "sonarpad-minimal"
version = "0.1.0"
edition = "2024"

[dependencies]
wxdragon = "0.9.9"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "std"] }
futures-util = "0.3"
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
url = "2.5"
rodio = "0.20"
docx-rs = "0.4"
pdf-extract = "0.10"
epub = "2.1"
calamine = "0.32"
encoding_rs = "0.8"
html2text = "0.13"
